--- a/ms-browse/values.yaml
+++ b/ms-browse/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: nginx
+  repository: chelibane/jsapp:0.1.0
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
