--- a/ms-browse/values.yaml
+++ b/ms-browse/values.yaml
@@ -2,10 +2,10 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+replicaCount: 6
 
 image:
-  repository: chelibane/jsapp:0.1.0
+  repository: nginx
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
