--- a/ms-browse/values.yaml
+++ b/ms-browse/values.yaml
@@ -2,10 +2,10 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 2
+replicaCount: 4
 
 image:
-  repository: nginx
+  repository: 535408288813.dkr.ecr.eu-west-3.amazonaws.com/asaru/jsapp:0.1.1
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
