--- a/ms-browse/values.yaml
+++ b/ms-browse/values.yaml
@@ -2,10 +2,10 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 4
+replicaCount: 2
 
 image:
-  repository: 535408288813.dkr.ecr.eu-west-3.amazonaws.com/asaru/jsapp:0.1.1
+  repository: harbor.asaru.info/front-01/jsapp:0.0.0
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
