--- a/ms-browse/values.yaml
+++ b/ms-browse/values.yaml
@@ -2,10 +2,11 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 2
+replicaCount: 3
 
 image:
-  repository: harbor.asaru.info/front-01/jsapp:0.0.0
+  #repository: harbor.asaru.info/front-01/jsapp:0.0.0
+  repository: nginx
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
