--- a/ms-angular/Dockerfile
+++ b/ms-angular/Dockerfile
@@ -3,5 +3,6 @@ WORKDIR /app
 COPY . .
 RUN npm install && \
     npm run build
-FROM nginx:alpine
-COPY --from=builder /app/dist/ng-ms /usr/share/nginx/html/
+echo "build completed"
+#FROM nginx:alpine
+#COPY --from=builder /app/dist/ng-ms /usr/share/nginx/html/
