--- a/ms-angular/Dockerfile
+++ b/ms-angular/Dockerfile
@@ -3,6 +3,6 @@ WORKDIR /app
 COPY . .
 RUN npm install && \
     npm run build
-echo "build completed"
+#echo "build completed"
 #FROM nginx:alpine
 #COPY --from=builder /app/dist/ng-ms /usr/share/nginx/html/
